Se termino el index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,93 @@
             </div>
         </div>
     </header>
+    <main class="blog contenedor">
+        <h3>Nuestro blog</h3>
+        <div class="two-columns">
+            <div class="entradas">
+                <article class="entrada">
+                    <div class="entrada__imagen">
+                        <img src="img/blog1.jpg" alt="blog1">
+                    </div>
+                    <div class="entrada__informacion">
+                        <h4 class="entrada__titulo">Tipos de Grano de Café</h4>
+                        <p class="entrada__texto">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
+                        </p>
+                        <a class="entrada__boton" href="#">Leer entrada</a>
+                    </div>
+                </article>
+                <article class="entrada">
+                    <div class="entrada__imagen">
+                        <img src="img/blog2.jpg" alt="blog2">
+                    </div>
+                    <div class="entrada__informacion">
+                        <h4 class="entrada__titulo">3 Deliciosas Recetas de Café</h4>
+                        <p class="entrada__texto">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
+                        </p>
+                        <a  class="entrada__boton" href="#">Leer entrada</a>
+                    </div>
+                </article>
+                <article class="entrada">
+                    <div class="entrada__imagen">
+                        <img src="img/blog3.jpg" alt="blog3">
+                    </div>
+                    <div class="entrada__informacion">
+                        <h4 class="entrada__titulo">Beneficios del Café</h4>
+                        <p class="entrada__texto">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
+                        </p>
+                        <a  class="entrada__boton" href="#">Leer entrada</a>
+                    </div>
+                </article>
+            </div>
+            <div class="asides">
+                <aside class="sidebar">
+                    <h3>Nuestros Cursos y Talleres</h3>
+        
+                    <ul class="cursos no-padding">
+                        <li class="widget-curso">
+                            <h4 class="no-margin">Técnicas de Extracción de Café</h4>
+                            <p class="widget-curso__label">Precio: 
+                                <span class="widget-curso__info">Gratis</span>
+                            </p>
+                            <p class="widget-curso__label">Cupo: 
+                                <span class="widget-curso__info">20</span>
+                            </p>
+                            <input class="widget-curso__boton" type="submit" value="Más Información sobre nuestros cursos">
+                        </li>
+        
+                        <li class="widget-curso">
+                            <h4 class="no-margin">4 Recetas de Café para Principiantes</h4>
+                            <p class="widget-curso__label">Precio: 
+                                <span class="widget-curso__info">Gratis</span>
+                            </p>
+                            <p class="widget-curso__label">Cupo: 
+                                <span class="widget-curso__info">20</span>
+                            </p>
+                            <input class="widget-curso__boton" type="submit" value="Más Información sobre nuestros cursos">
+                        </li>
+                    </ul>
+                </aside>
+            </div>
+        </div>
+    </main>
+
+    <footer class="footer bg-black">
+        <div class="contenedor">
+            <div class="barra">
+                <a class="barra__logo" href="index.html">
+                    <h1> Blog<span>DeCafe</span></h1>
+                 </a>
+                 <nav class="barra__navegacion">
+                     <a class="barra__enlace" href="#">Nosotros</a>
+                     <a class="barra__enlace" href="#">Cursos</a>
+                     <a class="barra__enlace" href="#">Contacto</a>
+                 </nav>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
