Se agrego la sección de nosotros.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog de Cafe</title>
+    <title>BlogDeCafé</title>
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,10 +18,10 @@
         <div class="contenedor">
             <div class="barra">
                 <a class="barra__logo" href="index.html">
-                    <h1> Blog<span>DeCafe</span></h1>
+                    <h1> Blog<span>DeCafé</span></h1>
                  </a>
                  <nav class="barra__navegacion">
-                     <a class="barra__enlace" href="#">Nosotros</a>
+                     <a class="barra__enlace" href="nosotros.html">Nosotros</a>
                      <a class="barra__enlace" href="#">Cursos</a>
                      <a class="barra__enlace" href="#">Contacto</a>
                  </nav>
@@ -112,7 +112,7 @@
                     <h1> Blog<span>DeCafe</span></h1>
                  </a>
                  <nav class="barra__navegacion">
-                     <a class="barra__enlace" href="#">Nosotros</a>
+                     <a class="barra__enlace" href="nosotros.html">Nosotros</a>
                      <a class="barra__enlace" href="#">Cursos</a>
                      <a class="barra__enlace" href="#">Contacto</a>
                  </nav>
