Se agrego cursos.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                  </a>
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
-                     <a class="barra__enlace" href="#">Cursos</a>
+                     <a class="barra__enlace" href="cursos.html">Cursos</a>
                      <a class="barra__enlace" href="#">Contacto</a>
                  </nav>
             </div>
@@ -32,6 +32,7 @@
             </div>
         </div>
     </header>
+
     <main class="blog contenedor">
         <h3>Nuestro blog</h3>
         <div class="two-columns">
@@ -109,11 +110,11 @@
         <div class="contenedor">
             <div class="barra">
                 <a class="barra__logo" href="index.html">
-                    <h1> Blog<span>DeCafe</span></h1>
+                    <h1> Blog<span>DeCafé</span></h1>
                  </a>
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
-                     <a class="barra__enlace" href="#">Cursos</a>
+                     <a class="barra__enlace" href="cursos.html">Cursos</a>
                      <a class="barra__enlace" href="#">Contacto</a>
                  </nav>
             </div>
