--- a/nosotros.html
+++ b/nosotros.html
@@ -21,7 +21,7 @@
                  </a>
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
-                     <a class="barra__enlace" href="#">Cursos</a>
+                     <a class="barra__enlace" href="cursos.html">Cursos</a>
                      <a class="barra__enlace" href="#">Contacto</a>
                  </nav>
             </div>
@@ -51,11 +51,11 @@
         <div class="contenedor">
             <div class="barra">
                 <a class="barra__logo" href="index.html">
-                    <h1> Blog<span>DeCafe</span></h1>
+                    <h1> Blog<span>DeCafé</span></h1>
                  </a>
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
-                     <a class="barra__enlace" href="#">Cursos</a>
+                     <a class="barra__enlace" href="cursos.html">Cursos</a>
                      <a class="barra__enlace" href="#">Contacto</a>
                  </nav>
             </div>
