--- a/cursos.html
+++ b/cursos.html
@@ -22,7 +22,7 @@
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
                      <a class="barra__enlace" href="cursos.html">Cursos</a>
-                     <a class="barra__enlace" href="#">Contacto</a>
+                     <a class="barra__enlace" href="contacto.html">Contacto</a>
                  </nav>
             </div>
             <div class="header__texto">
@@ -75,7 +75,7 @@
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
                      <a class="barra__enlace" href="cursos.html">Cursos</a>
-                     <a class="barra__enlace" href="#">Contacto</a>
+                     <a class="barra__enlace" href="contacto.html">Contacto</a>
                  </nav>
             </div>
         </div>
