--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
                      <a class="barra__enlace" href="cursos.html">Cursos</a>
-                     <a class="barra__enlace" href="#">Contacto</a>
+                     <a class="barra__enlace" href="contacto.html">Contacto</a>
                  </nav>
             </div>
             <div class="header__texto">
@@ -115,7 +115,7 @@
                  <nav class="barra__navegacion">
                      <a class="barra__enlace" href="nosotros.html">Nosotros</a>
                      <a class="barra__enlace" href="cursos.html">Cursos</a>
-                     <a class="barra__enlace" href="#">Contacto</a>
+                     <a class="barra__enlace" href="contacto.html">Contacto</a>
                  </nav>
             </div>
         </div>
