--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="entrada__texto">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
                         </p>
-                        <a class="entrada__boton" href="#">Leer entrada</a>
+                        <a class="entrada__boton" href="entrada.html">Leer entrada</a>
                     </div>
                 </article>
                 <article class="entrada">
@@ -58,7 +58,7 @@
                         <p class="entrada__texto">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
                         </p>
-                        <a  class="entrada__boton" href="#">Leer entrada</a>
+                        <a  class="entrada__boton" href="entrada.html">Leer entrada</a>
                     </div>
                 </article>
                 <article class="entrada">
@@ -70,7 +70,7 @@
                         <p class="entrada__texto">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, rerum, reprehenderit consequatur perferendis officia, vitae fuga animi temporibus itaque atque reiciendis ea excepturi! Molestias aperiam fugiat deleniti laudantium atque numquam?
                         </p>
-                        <a  class="entrada__boton" href="#">Leer entrada</a>
+                        <a  class="entrada__boton" href="entrada.html">Leer entrada</a>
                     </div>
                 </article>
             </div>
